--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-     </div>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    </div>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" type="text/javascript"></script>
+    <script src="assets/script.js"></script>
+    
   </body>
 </html>
