--- a/index.html
+++ b/index.html
@@ -4,24 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"/>
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Calendar</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+    <title>Work Day Scheduler</title>
   </head>
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Calendar</h1>
-      <p class="lead">A Calendar for organizing your busy schedule</p>
+      <h1 class="display-3">Work Day Scheduler</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">9 am</p>
+        <textarea id="9" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">10 am</p>
+        <textarea id="10" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">11 am</p>
+        <textarea id="11" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">12 pm</p>
+        <textarea id="12" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">1 pm</p>
+        <textarea id="13" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">2 pm</p>
+        <textarea id="14" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">3 pm</p>
+        <textarea id="15" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">4 pm</p>
+        <textarea id="16" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
+
+      <div class="time-block row justify-center align-center">
+        <p class="hour col-1">5 pm</p>
+        <textarea id="17" class="col-10 description"></textarea>
+        <button type="submit" class="saveBtn col-1">Save</button>
+      </div>
     </div>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" type="text/javascript"></script>
-    <script src="assets/script.js"></script>
-    
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
